<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>
        <variable
            name="databingmodel"
            type="com.invoicemaker.ProfileDataModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/subBtn"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/username"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/square"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@={databingmodel.CName}"
                    android:cursorVisible="false"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:autofillHints="name" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/company_name"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/square"
                    android:text="@={databingmodel.CName}"
                    android:hint="@string/company_name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:autofillHints="name" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/address"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/square"
                    android:hint="@string/address"
                    android:text="@={databingmodel.address}"
                    android:inputType="textMultiLine"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:autofillHints="name" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/gst_no"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtGstNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/square"
                    android:hint="@string/gst_no"
                    android:text="@={databingmodel.gstNo}"
                    android:inputType="textMultiLine"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:autofillHints="name" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/square_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/state_gst"
                        android:textColor="@color/app_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtStateGst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/square"
                        android:hint="@string/state_gst"
                        android:inputType="number"
                        android:text="@={databingmodel.SGst}"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:padding="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="1dp"
                        android:autofillHints="name" />
                </LinearLayout>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/square_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/central_gst"
                        android:textColor="@color/app_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtCenterGST"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/square"
                        android:hint="@string/gst_no"
                        android:inputType="number"
                        android:text="@={databingmodel.CGst}"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:padding="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="1dp"
                        android:autofillHints="name" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/declaration"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtDeclaration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="name"
                    android:background="@drawable/square"
                    android:gravity="start"
                    android:hint="@string/declaration"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:text="@={databingmodel.declaration}"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/invoice_message"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtInvoiceMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/square"
                    android:hint="@string/invoice_message"
                    android:inputType="textMultiLine"
                    android:textAlignment="textStart"
                    android:text="@={databingmodel.invMsg}"
                    android:gravity="start"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:autofillHints="name" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/terms_of_delivery"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtTermsofDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/square"
                    android:hint="@string/terms_of_delivery"
                    android:inputType="textMultiLine"
                    android:text="@={databingmodel.tod}"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:autofillHints="name" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/other"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/square"
                    android:hint="@string/other"
                    android:text="@={databingmodel.other}"
                    android:inputType="textMultiLine"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:autofillHints="name" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/subBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/submit" />

</RelativeLayout>
</layout>